bug 2857 fixed: select/options are invisible (#ccc on #ccc) with Chrome
git-svn-id: http://piwigo.org/svn/trunk@21173 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/themes/elegant/theme.css
+++ b/themes/elegant/theme.css
@@ -21,7 +21,7 @@ html, body									{ background-color: #111;}
 INPUT[type="text"], INPUT[type="password"],
 INPUT[type="button"], INPUT[type="submit"],
 INPUT[type="reset"], INPUT[type="file"],
-SELECT, TEXTAREA							{ background-color: #555;}
+SELECT, TEXTAREA, OPTION							{ background-color: #555;}
 INPUT:focus, SELECT:focus, TEXTAREA:focus	{ background-color: #666;}
 
 
